<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/meal_image"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:contentDescription="@string/image_description"
            android:foreground="#48000000"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/program_title"
            style="@style/textPrimarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/program"
            android:textAllCaps="true"
            android:textColor="@color/colorTextIcons"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/meal_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/meal_image"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/meal_name"
            style="@style/textPrimaryMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorTextIcons"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/course_variant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/program_title"
            tools:text="Healthy lifestyle: A guide for beginner" />

        <TextView
            android:id="@+id/course_variant"
            style="@style/textPrimarySmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAllCaps="true"
            android:textColor="@color/colorTextIcons"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/start_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/meal_image"
            app:layout_constraintTop_toBottomOf="@+id/meal_name"
            tools:text="Weight Gain - Beginner - 2H" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course_variant" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>