<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dashboard_title"
            style="@style/textPrimarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dashboard_title"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goal_message"
            style="@style/textPrimaryMedium"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_title"
            tools:text="You has walked 70% of your goal !" />

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goal_message">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/progress_circle_shape"
                android:max="100"
                android:progressDrawable="@drawable/progress_circle_bar"
                tools:max="100"
                tools:progress="25" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/calories_left"
                    style="@style/textPrimaryMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    tools:text="1250 Cal" />

                <TextView
                    android:id="@+id/calories_left_title"
                    style="@style/textSecondarySmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/left"
                    android:textAlignment="center" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/workouts_value"
            style="@style/textPrimaryMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/workouts_title"
            app:layout_constraintEnd_toEndOf="@+id/workouts_title"
            app:layout_constraintStart_toStartOf="@+id/workouts_title"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout"
            tools:text="15" />

        <TextView
            android:id="@+id/workouts_title"
            style="@style/textSecondarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/workouts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/minutes_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workouts_value" />

        <TextView
            android:id="@+id/minutes_value"
            style="@style/textPrimaryMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/minutes_title"
            app:layout_constraintEnd_toEndOf="@+id/minutes_title"
            app:layout_constraintStart_toStartOf="@+id/minutes_title"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout"
            tools:text="01:50:50" />

        <TextView
            android:id="@+id/minutes_title"
            style="@style/textSecondarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/minutes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/calories_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/workouts_title"
            app:layout_constraintTop_toBottomOf="@+id/minutes_value" />

        <TextView
            android:id="@+id/calories_value"
            style="@style/textPrimaryMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/calories_title"
            app:layout_constraintEnd_toEndOf="@+id/calories_title"
            app:layout_constraintStart_toStartOf="@+id/calories_title"
            app:layout_constraintTop_toBottomOf="@+id/relative_layout"
            tools:text="350 Cal" />

        <TextView
            android:id="@+id/calories_title"
            style="@style/textSecondarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/calories"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/minutes_title"
            app:layout_constraintTop_toBottomOf="@+id/calories_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>