<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border">

        <TextView
            android:id="@+id/type_title"
            style="@style/textSecondarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            app:layout_constraintBottom_toTopOf="@+id/status_title"
            app:layout_constraintEnd_toStartOf="@+id/type_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/type_value"
            style="@style/textPrimarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/status_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/type_title"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Monthly" />

        <TextView
            android:id="@+id/status_title"
            style="@style/textSecondarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/status"
            app:layout_constraintBottom_toTopOf="@+id/expiry_time_title"
            app:layout_constraintEnd_toStartOf="@+id/status_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_title" />

        <TextView
            android:id="@+id/status_value"
            style="@style/textPrimarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/expiry_time_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/status_title"
            app:layout_constraintTop_toBottomOf="@+id/type_value"
            tools:text="Done" />

        <TextView
            android:id="@+id/expiry_time_title"
            style="@style/textSecondarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/expiry_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/expiry_time_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_title" />

        <TextView
            android:id="@+id/expiry_time_value"
            style="@style/textPrimarySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/expiry_time_title"
            app:layout_constraintTop_toBottomOf="@+id/status_value"
            tools:text="Sun, September 27, 2020" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>